# ece-4122-projects

./: README.md
1D-heat-transfer/src/: heat1d.cc
1d-heat-transfer/: CMakeLists.txt
2D-fft/: CMakeLists.txt
2D-fft/images/: Tower128.txt  Tower512.txt  Tower8.txt
2D-fft/src/: complex.cc  complex.cuh  complex.h  cuda_dft.cu  input_image.cc  input_image.cuh  mpi_dft.cc  thread_dft.cc
2D3D-heat-transfer/: CMakeLists.txt
2D3D-heat-transfer/config/: 3d_test.conf
2D3D-heat-transfer/src/: heat2D3D.cu
multithreaded-heat-transfer/: CMakeLists.txt
multithreaded-heat-transfer/config/: 2d_test.conf  config1.conf  config10.conf  config2.conf  config3.conf  config4.conf  config5.conf  config6.conf  config7.conf  config8.conf  config9.conf
multithreaded-heat-transfer/src/: heat2D3D.cc
std-array/: CMakeLists.txt  main.cc  p1_main.cpp  test_main.cc
std-array/src/: array.cc  array.h  simple_string.cc  simple_string.h
vector/: CMakeLists.txt  main.cc
vector/src/: vector3.cc  vector3.h
